--- a/Aula02_servlets/nbproject/private/private.properties
+++ b/Aula02_servlets/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\rlarg\\AppData\\Roaming\\NetBeans\\11.3\\tomcat90.properties
-j2ee.server.home=C:/apache-tomcat-9.0.35
-j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.35
+j2ee.server.home=C:/Program Files/Apache/tomcat9
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache\\tomcat9
 selected.browser=Chrome
 user.properties.file=C:\\Users\\rlarg\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
