--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /Aula03_Jspf/build/
 /Aula05_POO/nbproject/private/
 /Aula05_POO/build/
+/Aula11_SQLiteTasks/nbproject/private/
+/Aula11_SQLiteTasks/build/
+/Aula10_SQLiteTasks/build/
