--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Aula11_SQLiteTasks/nbproject/private/
 /Aula11_SQLiteTasks/build/
 /Aula10_SQLiteTasks/build/
+/Aula12_ControleDeAcesso/nbproject/private/
+/Aula12_ControleDeAcesso/build/
