--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Aula10_SQLiteTasks/build/
 /Aula12_ControleDeAcesso/nbproject/private/
 /Aula12_ControleDeAcesso/build/
+/Aula13_MyFinance/nbproject/private/
+/Aula13_MyFinance/build/
